# readeon

./: Cargo.toml  README.md  USAGE.md  readeon.db
src/: app.rs  main.rs
src/api/: openlibrary.rs
src/db/: book_repo.rs  init.rs  mod.rs  note_repo.rs  session_repo.rs  stats_repo.rs
src/domain/: book.rs  mod.rs  note.rs  session.rs  stats.rs  tag.rs
src/ui/: add_book_view.rs  add_note_view.rs  add_session_view.rs  book_view.rs  library_view.rs  mod.rs  stats_view.rs
