[package]
name = "readeon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
